// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings actions resetSettings creates a RESET_SETTINGS action 1`] = `
Object {
  "type": "RESET_SETTINGS",
}
`;

exports[`settings reducer handles SETTINGS_SET_VALUE 1`] = `
Object {
  "memories": Object {
    "displaySuggestions": true,
  },
  "notifications": Object {
    "activities": false,
    "email": true,
    "growth": true,
    "memories": undefined,
    "stimulation": true,
  },
  "unitDisplay": Object {
    "height": "cm",
    "weight": "kg",
  },
}
`;

exports[`settings reducer has an initial state 1`] = `
Object {
  "memories": Object {
    "displaySuggestions": true,
  },
  "notifications": Object {
    "activities": false,
    "email": true,
    "growth": true,
    "memories": true,
    "stimulation": true,
  },
  "unitDisplay": Object {
    "height": "cm",
    "weight": "kg",
  },
}
`;
